# CO-Oxidation

./: .gitignore  README.md  pyproject.toml  submit_coexistence_sge.sh  submit_kmc_sge.sh  submit_sweep_job.sh
src/co_oxidation/: __init__.py
src/co_oxidation/memkm/: __init__.py  backend.py  coexistence.py  model.py
sweeps/: _common.py  linear.py  mpi.py  plotting.py
